@@ -43,3 +43,4 @@ test: thread/thread
 test: thread/thread_implicit
 test: thread/prep
 test: thread/alloc
+test: thread/descriptor
