@@ -43,5 +43,6 @@ test: thread/thread
 test: thread/thread_implicit
 test: thread/prep
 test: thread/alloc
+test: thread/descriptor
 test: connect/test1
 
